fix Contact me  when height set to stretch component looks considerably different in different browsers.

--- a/src/app/contact-me/contact-me.component.css
+++ b/src/app/contact-me/contact-me.component.css
@@ -1,8 +1,8 @@
 .contact-container {
   display: flex;
-  margin: 200px auto 0px auto;
+  margin: 100px auto 0px auto;
   width: 80%;
-  height: stretch;
+  height: 100%;
   justify-content: space-between;
 }
 
